k8s/html5-speedtest-client.yml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: html5speed

---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html5speed-deployment
  namespace: html5speed
spec:
  replicas: 1
  selector:
    matchLabels:
      component: html5speed-server
  template:
    metadata:
      labels:
        component: html5speed-server
    spec:
      containers:
        - name: html5speed-server
          image: sohailniazi/html
          ports:
            - containerPort: 80

---
# service
apiVersion: v1
kind: Service
metadata:
  name: html5speed-service
  namespace: html5speed
spec:
  type: ClusterIP
  selector:
    component: html5speed-server
  ports:
    - port: 80
      targetPort: 80

---
# ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: html5speed-ingress-service
  namespace: html5speed
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: html5speed-service
              servicePort: 80
